# 2025SciComProCoder

./: README.md
lec12_C++_in_Scientific_Computation/: 01-poly-function_overloading.cpp  02-poly-specialization-basic.cpp  02-poly-specialization-unroll.cpp  02-poly-template.cpp  03-poly-ABC_virtual_functions.cpp  04-type_traits.cpp  05-concept.cpp  CMakeLists.txt
lec12_C++_in_Scientific_Computation/answer/: 01-linear_algebra_interface.h  02-power_method.cpp  CMakeLists.txt
lec12_C++_in_Scientific_Computation/exercise/: 01-linear_algebra_interface.h  01-unit_test.cpp  02-power_method.cpp  random_generator.h
lec12_C++_in_Scientific_Computation/include/: basic.h  concept.example.h  polymorphism_example.h
lec13_einsum/: 00--einsum_op.ipynb  01--traint.ipynb  02--mp2.ipynb
lec13_einsum/laplace/: laplace.py
lec13_einsum/thc/: einsum_holder.py  thc_backend.py  thc_eom_rccsd.py  thc_rccsd.py  thc_rccsd_t.py  thc_rintermediates.py
lec8GTOint/: QCCodeHe2-Bsuo.ipynb
sec9 数值积分/: 2024年12月青岛-数值积分.pptx
